2 - tidy: IntelliJ suggestions